--- a/DanmakuToAss/DanmakuToAss.csproj
+++ b/DanmakuToAss/DanmakuToAss.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DanmakuToAss.Library\DanmakuToAss.Library.csproj" />
+    <ProjectReference Include="..\DanmakuToAss.Protobuf\DanmakuToAss.Protobuf.csproj" />
   </ItemGroup>
 
 </Project>
