--- a/DanmakuToAss/Properties/launchSettings.json
+++ b/DanmakuToAss/Properties/launchSettings.json
@@ -1,7 +1,8 @@
 {
   "profiles": {
     "DanmakuToAss": {
-      "commandName": "Project"
+      "commandName": "Project",
+      "commandLineArgs": "test4.xml"
     }
   }
 }
