--- a/DanmakuToAss.Protobuf/DanmakuToAss.Protobuf.csproj
+++ b/DanmakuToAss.Protobuf/DanmakuToAss.Protobuf.csproj
@@ -2,6 +2,11 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <PackageId>DanmakuToAss.Protobuf</PackageId>
+    <Authors>EveElseIf</Authors>
+    <Description>将B站protobuf弹幕(仅滚动，反向滚动，顶部，底部弹幕)转换为ass或xml格式</Description>
+    <PackageTags>danmaku</PackageTags>
+    <RepositoryUrl>https://github.com/EveElseIf/DanmakuToAss</RepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
