--- a/DanmakuToAss.Protobuf/DanmakuToAss.Protobuf.csproj
+++ b/DanmakuToAss.Protobuf/DanmakuToAss.Protobuf.csproj
@@ -7,6 +7,7 @@
     <Description>将B站protobuf弹幕(仅滚动，反向滚动，顶部，底部弹幕)转换为ass或xml格式</Description>
     <PackageTags>danmaku</PackageTags>
     <RepositoryUrl>https://github.com/EveElseIf/DanmakuToAss</RepositoryUrl>
+    <Version>1.0.2</Version>
   </PropertyGroup>
 
   <ItemGroup>
